Responsitivity Adaptation (RA) : hiding unnecessary elements, fixing project tech alignments and project html structures

--- a/styles/style.css
+++ b/styles/style.css
@@ -1186,6 +1186,12 @@ footer {
 @media (max-width: 690px) {
 
 
+    /* ➔➔➔➔ PRESENTATION  */
+    #play-cta{
+        display: none;
+    }
+
+
     /* ➔➔➔➔ BIO  */
     #bio {
         flex-direction: column;
@@ -1244,11 +1250,8 @@ footer {
         border: 5px solid rgba(41, 255, 17, 0);
         width: 70%;
         margin-left: auto;
-        /* Pushes the container to the right */
         margin-right: 0;
-        /* Ensures it aligns fully to the right */
         display: block;
-        /* Ensures standard layout unless flexbox is required elsewhere */
     }
 
     .skills-isotope #container9 {
@@ -1267,8 +1270,10 @@ footer {
 
 
     figure.sticky {
-        background-color: #007BFF;
+        /*background-color: #007BFF;*/
         height: 0vh !important;
+        z-index: 5;
+        margin-bottom: 10vh;
     }
 
     figure.sticky div {
@@ -1300,8 +1305,15 @@ footer {
     }
 
 
+
     .hidden {
         display: none;
+    }
+
+    .p-description h5{
+        text-align: left;
+
+
     }
 
 }
